master/traefik/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.internal.durp.info`)
    middlewares:
    - name: authentik-proxy-provider
      namespace: traefik    
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  - match: Host(`traefik.internal.durp.info`) && PathPrefix(`/outpost.goauthentik.io`)
    kind: Rule
    services:
    - name: ak-outpost-master-embedded-outpost
      namespace: authentik
      port: 9000        
  tls:
    secretName: traefik-tls
